# 3dModMatch

./: .gitignore  BUILD_AND_TEST_COMPLETE.md  BUILD_ISSUES_SUMMARY.md  SETUP_COMPLETE.md  django_project_structure.md  requirements.txt  shoe_last_matcher.py  test_build_3dm.sh  test_match.sh
demo/: dashboard.html
desktop/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
desktop/python-engine/: CMakeLists.txt  build_with_docker.sh  main.py  pyproject.toml  requirements.txt
dev-container/: .dockerignore  Dockerfile  QUICK_START.md  README.md  build.sh  build_cpp.sh  docker-compose.yml  install_opennurbs.sh  run.sh  setup_all.sh  setup_ssh.sh  ssh_config  start_dev.sh  test_build.sh  test_environment.sh
hybrid/: 3DM_DATA_STRUCTURE.md  CLEARANCE_FIX_SUMMARY.md  DOCKER_BUILD_SUMMARY.md  DOCKER_TEST_RESULTS.md  DOCKER_USAGE.md  Dockerfile  README.md  build_cpp.sh  docker-compose.yml  match.sh
models/: 1177-38.3dm  3276-6.3dm  3276_7T.3dm
shoe_matching_system/: .env  Dockerfile  README.md  config.env.example  db.sqlite3  deploy.sh  docker-compose.yml  manage.py  pip.conf  requirements.txt  test_3d_enhanced.py  test_advanced.py  test_report.json  test_system.py
webpage/: DEVELOPMENT_COMPLETE.md  DOCKER_COMPOSE_FINAL.md  DOCKER_COMPOSE_SUCCESS.md  DOCKER_SUCCESS_REPORT.md  Dockerfile  EXECUTION_COMPLETE.md  FINAL_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  QUICK_START.md  QUICK_START_FINAL.md  README.md  README_FINAL.md  deploy_production.sh  docker-compose.prod.yml  docker-compose.yml  docker-up.sh  entrypoint.sh  env.prod.example  env.production  init_db.sql  manage_system.sh  run_complete_test.sh  start.sh  test_matching.py  (+6 more)
(+152 files in other folders)
